tests/errors/first_stage/.data/const_not_found/const_not_found.as
; constant refrenced in a .data argument was not declared before
; -its use (or just not declared in this file)
myArr: .data 1, b, 3
.define b = 2